2.AKS/GitOps/harbor/harbor-1.7.5/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: cicd
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress
  namespace: cicd
spec:
  rules:
  - host: regitry.nodespringboot.org
    http:
      paths:
      - backend:
          service:
            name: harbor-portal
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /api/(.*)
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /service/(.*)
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /v2
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /chartrepo/(.*)
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /c/(.*)
        pathType: Prefix
  # tls:
  # - hosts:
  #   - regitry.nodespringboot.org
  #   secretName: harbor-ingress
